[workspace]
members = [
    "leaflet-core",
    "leaflet-cli"
]

resolver = "3"   # use edition 2024 feature resolver

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Aditya Singh aditya26sg@gmail.com"]
repository = "https://github.com/aditya172926/leaflet"


[workspace.dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }