[package]
name = "leaflet-cli"
version.workspace = true
edition = "2024"
authors.workspace = true
repository.workspace = true

[[bin]]
name = "leaflet"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.50", features = ["derive"] }
leaflet-core = { path = '../leaflet-core' }
