[package]
name = "leaflet-core"
version.workspace = true
edition = "2024"
authors.workspace = true
repository.workspace = true
description = "Core leaflet library for systems metric collection and visualization via the leaflet-cli"
license = "MIT"
readme = "../README.md"
keywords = ["metrics", "system", "monitoring"]
categories = ["development-tools::profiling"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.42"
sysinfo = "0.37.2"
thiserror = "2.0.17"
tokio = { workspace = true }
