[package]
name = "stomata-cli"
description = "CLI tool for collecting and visualizing system metrics"
license.workspace = true
version = "0.1.8"
edition = "2024"
authors.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["rust", "cli", "metrics"]
categories = ["command-line-utilities"]

[[bin]]
name = "stomata"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.50", features = ["derive"] }
stomata-core = { version = "0.1.4", path = '../stomata-core' }
sysinfo = { workspace = true }
chrono = { workspace = true }