[package]
name = "stomata-core"
version = "0.1.3"
edition = "2024"
authors.workspace = true
repository.workspace = true
description = "Core stomata library for systems metric collection and visualization via the stomata-cli"
license.workspace = true
readme = "../README.md"
keywords = ["metrics", "system", "monitoring"]
categories = ["development-tools::profiling"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
thiserror = "2.0.17"
tokio = { workspace = true }
